Update configuration for MongoDB Atlas and Railway deployment
- Configure MongoDB Atlas connection string with proper database name
- Update environment variable names for application compatibility
- Set production-ready secrets and JWT configuration
- Update deployment guides with correct variable names
- Ensure GMAIL_USER variable matches application expectations
- Add proper MongoDB Atlas connection parameters

--- a/config.env.example
+++ b/config.env.example
@@ -1,19 +1,18 @@
-# Database Configuration
-DB=mongodb://localhost:27017/pulse-db
-DB_PASSWORD=your_db_password
+# Database Configuration (MongoDB Atlas Cloud) - Updated for Railway
+DB=mongodb+srv://username:password@cluster.mongodb.net/?retryWrites=true&w=majority&appName=pulse-cluster&ssl=true&tlsInsecure=true
+DB_PASSWORD=your_mongodb_password
 
-# Session Configuration
-SECRET=your-super-secret-session-key
+# JWT Secret for authentication
+SECRET=pulse_secret_key_2025_super_secure_key
 
-# Server Configuration
+# Port Configuration
 PORT=4000
 
-# Email Configuration (Gmail OAuth)
-GMAIL_USER=your-email@gmail.com
-GMAIL_CLIENT_ID=your-gmail-client-id
-GMAIL_CLIENT_SECRET=your-gmail-client-secret
-GMAIL_REFRESH_TOKEN=your-gmail-refresh-token
+# Email Configuration (Optional - for contact forms)
+GOOGLE_CLIENT_ID=your_google_client_id
+GOOGLE_CLIENT_SECRET=your_google_client_secret
+GOOGLE_REFRESH_TOKEN=your_google_refresh_token
+GMAIL_USERNAME=msumanth117@gmail.com
 
-# JWT Configuration
-JWT_SECRET=your-jwt-secret-key
-JWT_EXPIRES_IN=24h
+# Production Environment
+NODE_ENV=production
